--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
+    "vis": "^4.21.0-EOL",
+    "vis-timeline": "^7.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
