--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
+    "react-whammy": "^1.0.4",
+    "recordrtc": "^5.6.2",
+    "render-video": "^0.0.5",
     "vis": "^4.21.0-EOL",
     "vis-timeline": "^7.7.2",
     "web-vitals": "^2.1.4"
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/recordrtc": "^5.6.12"
   }
 }
